bug fix for wrong fonts on ASC news articles

--- a/styles/override.css
+++ b/styles/override.css
@@ -22,7 +22,9 @@ a:hover{color: #000; background-color: #f4f0e6;}
 
 body,
 body p,
-body .content {
+body .content,
+body .content div.page, 
+body .content div.news p {
 	font-family: "proximanova", Arial, sans-serif;
 	font-weight: 400;
 	font-size: 15px;
